<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_title"/>

    <ListPreference
        android:defaultValue="@string/pref_temp_units_metric"
        android:dialogTitle="@string/pref_temp_units_title"
        android:entries="@array/pref_temp_units_options"
        android:entryValues="@array/pref_temp_units_values"
        android:key="temp_units"
        android:title="@string/pref_temp_units_title"/>

    <CheckBoxPreference
        android:defaultValue="@string/pref_enable_notifications_default"
        android:key="@string/pref_enable_notifications_key"
        android:summaryOff="@string/pref_enable_notifications_false"
        android:summaryOn="@string/pref_enable_notifications_true"
        android:title="@string/pref_enable_notifications_label"/>
</PreferenceScreen>
